# camera-gst-h264-rs-v2

./: CLOUDFLARE_TUNNEL_SETUP.md  Cargo.toml  DEVICE-CONFIG.md  README.md  run-device-0.ps1  run-device-1.ps1
src/: capture.rs  config.rs  encoder.rs  main.rs  metrics.rs  peer.rs  routes.rs  types.rs  writer.rs
src/webrtc/: api.rs  connection.rs  mod.rs  signaling.rs
static/: index.html
