[package]
name = "camera-gst-h264-rs-v2"
version = "0.1.0"
edition = "2024"

[dependencies]
# GStreamer
gstreamer        = "0.23"
gstreamer-app    = "0.23"

# WebRTC
webrtc           = "0.11"
rustls           = { version = "0.23", features = ["ring"] }

# HTTP + WebSocket
axum             = { version = "0.7", features = ["ws"] }
tower-http       = { version = "0.5", features = ["fs", "cors"] }

# Async runtime
tokio            = { version = "1", features = ["full"] }

# Channels
crossbeam-channel = "0.5"

# Serialization
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"

# Metrics
metrics                     = "0.23"
metrics-exporter-prometheus = "0.15"

# Utilities
anyhow           = "1"
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes            = "1"
dashmap          = "2"
uuid             = { version = "1", features = ["v4"] }
num_cpus         = "1"
